web-app/css/main.css
/* ... */
/* Following group plays a part in creating top LEFT "half arrow," i.e. popover flips to the left */
.dd-popover-client .popover.flipright {
    border-top-left-radius: 0;
}

.dd-popover-client .popover.flipright .arrow {
    border-width: 12px;
}

.dd-popover-client .popover.bottom.flipright .arrow {
    border-left-width: 0;
    top: -24px;
    left: 10px;
}

.dd-popover-client .popover.bottom.flipright .arrow:after {
    border-left-width: 0;
    border-bottom-color: #fffeea;
    top: 2px;
    margin-left: 1px;
}

.dd-tooltip {
    font-weight: normal;
    padding: 5px;
    background: #fffeea;
    border: 1px solid #e0d397;
}


/*Table and grid section styles*/
table {
    width: 100%;
    border-collapse: collapse;
    border: 1px solid #beccd7;
    border-bottom: 1px solid #beccd7;
    border-top: none;
    background: #ffffff;
}

table th, .table>thead>tr>th {
    background: #ffffff url('../images/table-separator.png') center right no-repeat;
    border: none;
    padding: 18px 16px 18px 16px;
    text-align: left;
    border-bottom: 1px solid #c0ced0;
    vertical-align: middle;
}

table th:last-child, .table>thead>tr>th:last-child, .dashboard th:nth-of-type(8), .dashboard th:nth-of-type(9) {
    background: none;
    white-space: nowrap;
}
.dashboard td:nth-of-type(8), .dashboard td:nth-of-type(7)  {
    white-space: nowrap;

}

table tr:hover {
    background: #F3FCFF !important;
}

table tr.account-total-footer:hover {
    background: #f9f9f9 !important;
}

table tr:hover th:last-child, .dashboard tr:hover th:nth-of-type(8) {
    background: #ffffff;
}

table th span, .table>thead>tr>th span, table tr td {
    color: #4F585F;
    font-weight: 500;
    vertical-align: middle;
}

table>thead>tr>th:first-child, table>tbody>tr>td:first-child {
    padding-left: 20px;
}

table tr td {
    font-weight: normal;
    border-bottom: 1px solid #beccd7;
    padding: 15px 16px 15px 16px;
}

/**************/
/* Animations */
/**************/
@keyframes notification-fadein {
    from {opacity: 0;}
    to   {opacity: 1;}
}

.inline-notification {
    animation-name: notification-fadein;
    animation-duration: 1s;
}

/***********************/
/* Media Query Section */
/***********************/

@media screen and (max-width:1024px) {
    .account-heading {
        margin-right: 40px;
    }
}

@media(max-width:568px){
    .xs-fix {
        width: 100%;
    }

    .edit-flex-div2 {
        display: inline;
    }

    .mobile-errors {
        display: inline-block;
    }

    .xs-errors-visible {
        display: none;
    }
}

@media screen and (max-width:767px) {
    .edit-flex-div1 {
        display: inline;
    }

    .clear-xs-sm {
        clear: both;
    }
}

@media screen and (min-width:768px) {
    .account-heading {
        margin-bottom: 15px;
    }

    .account-field {
        float: left;
        width: 30%;
        margin-bottom: 15px;
    }

    .dd-notification-box {
        margin-left:  auto;
        margin-right: auto;
    }

    .dd-notification-content {
        line-height: .9
    }

    .dialog-hdr1 {
        font-size: 24px;
        padding: 1em 1em 0.75em;
    }
    
    button.closebtn {
        padding: 2.35em;
    }

    .pad-dialog-lr {
        padding: 0em 1.7em;
    }

    .edit-flex-div2 {
        width: 66.666666666%;
    }

    .mobile-errors-acType {
        display: none;
    }

    .xs-errors-visible {
        display: none;
    }
}

/*Tablet device*/
@media screen and (min-width: 768px) and (max-width: 1024px) {
    .payroll-status-wrapper {
        top: 28px;
    }

    .dd-notification-content {
        line-height: normal
    }

    .input-layer {
        z-index: 1000;
    }
}

